# EpubTranslator

./: .gitignore  .gitmodules  CMakeLists.txt  EncodeAndDecode.py  README.md  main.cpp  main.h  tokenizer.py
onnx-model-dir/: config.json
src/: EpubTranslator.cpp  EpubTranslator.h
